2008-01-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/gimpressionist/gimp.c (grabarea): changed code that
	retrieves the source drawable to iterate over the data tile-by-tile.

2008-01-26  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c (pygimp_rgb_from_pyobject): no
	need to use a temporary in tuple translation, and clamp the result.

	* plug-ins/pygimp/gimpmodule.c (pygimp_set_background,
	pygimp_set_foreground): restore support for passing in 3 args for
	color components, for backward compatibility.

2008-01-26  Joao S. O. Bueno <gwidion@mpc.com.br> 
	
	* plug-ins/pygimp/pygimp-colors.c (pygimp_rgb_from_pyobject): fix
	subsequent error (calculated parameters where not used)

2008-01-26  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c (pygimp_rgb_from_pyobject): fix
	error reporting.

2008-01-25  Michael Natterer  <mitch@gimp.org>

	* app/gegl/Makefile.am
	* app/gegl/gegl-types.h
	* app/gegl/gimpoperationpointfilter.[ch]: new parent class for all
	image map operations. Features a "config" member and "public"
	get_property() and set_property() functions to be used by
	subclasses.

	* app/gegl/gimpoperationcolorbalance.[ch]
	* app/gegl/gimpoperationcolorize.[ch]
	* app/gegl/gimpoperationcurves.[ch]
	* app/gegl/gimpoperationhuesaturation.[ch]
	* app/gegl/gimpoperationlevels.[ch]
	* app/gegl/gimpoperationposterize.[ch]
	* app/gegl/gimpoperationthreshold.[ch]: derive from
	GimpOperationPointFilter, remove "config" members, remove
	finalize(), get_property() and set_property() implementations and
	use the ones provided by the parent class.

2008-01-25  Michael Natterer  <mitch@gimp.org>

	* app/gegl/Makefile.am
	* app/gegl/gegl-types.h
	* app/gegl/gimpposterizeconfig.[ch]: new config object.

	* app/gegl/gimpoperationposterize.[ch]
	* app/tools/gimpposterizetool.[ch]: use it.

2008-01-25  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c